--- a/style.css
+++ b/style.css
@@ -37,7 +37,104 @@ color: rgb(234,67,53)
 #nav {
 display: flex
 }
-#nav li {margin-right: 15px;} #nav li:last-child {margin:0} #nav li a{font-size: 17px;color: #000} #nav li a:hover{color: #1a73e8} #sideMenuContainer {position: fixed;top: 56px;right: -200px;z-index: 1;border-radius: 4px;background-color: #fff;box-shadow: 0 1px 2px rgb(54 64 67 / 30%), 0 1px 3px rgb(54 64 67 / 15%);} #sideMenuContainer a {display: block;margin: 10px;} .content{margin: 3% 10%} h2{font-size: 20px; font-weight: normal;text-align: center;margin: 20px 0} .sheet{overflow: auto;} table {border-collapse: collapse;width: 100%;font-size: 14px;white-space: nowrap;} tr {border-bottom: 1px solid #dadce0} tbody tr:hover {background: #efefef;} th{padding: 7px;text-align: left;color: #1a73e8;border-bottom: 2px solid;} td{padding: 7px;} .oscars{color: #fbbc05;font-weight: bold;}.links{display: grid;grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));} .links li{margin: 2px;} .page{display: grid;grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));}.page li {margin: 8px;border: 1px solid #dadce0;border-radius: 8px;} .page li:hover{border:1px solid #1a73e8;}.page li a {display:block;padding: 15px;} @media print, screen and (max-width:631px) {#header {padding:2px 5%} #nav {display:none} .content {margin:5%}} @media print, screen and (min-width: 632px){#sideMenu {display:none}} 
+#nav li {
+margin-right: 15px;
+}
+#nav li:last-child {
+margin:0
+}
+#nav li a{
+font-size: 17px;
+color: #000
+}
+#nav li a:hover{
+color: #1a73e8
+}
+#sideMenuContainer {
+position: fixed;
+top: 56px;
+right: -200px;
+z-index: 1;
+border-radius: 4px;
+background-color: #fff;
+box-shadow: 0 1px 2px rgb(54 64 67 / 30%), 0 1px 3px rgb(54 64 67 / 15%);
+}
+#sideMenuContainer a {
+display: block;
+margin: 10px;
+}
+.content {
+margin: 3% 10%
+}
+h2 {
+font-size: 20px;
+font-weight: normal;
+text-align: center;
+margin: 20px 0
+}
+.sheet {
+overflow: auto;
+}
+table {
+border-collapse: collapse;
+width: 100%;
+font-size: 14px;
+white-space: nowrap;
+}
+tr {
+border-bottom: 1px solid #dadce0
+}
+tbody tr:hover {
+background: #efefef;
+}
+th {
+padding: 7px;
+text-align: left;
+color: #1a73e8;
+border-bottom: 2px solid;
+}
+td {
+padding: 7px;
+}
+.links {
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+}
+.links li {
+margin: 2px;
+}
+.page {
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+.page li {
+margin: 8px;
+border: 1px solid #dadce0;
+border-radius: 8px;
+}
+.page li:hover {
+border:1px solid #1a73e8;
+}
+.page li a {
+display:block;
+padding: 15px;
+}
+@media print, screen and (max-width:631px) {
+#header {
+padding:2px 5%
+}
+#nav {
+display:none
+}
+.content {
+margin:5%
+}
+}
+@media print, screen and (min-width: 632px){
+#sideMenu {
+display:none
+}
+} 
 @font-face {
 font-family: "iconfont";
 src: url('iconfont.woff') format('woff');
@@ -54,9 +151,6 @@ content: "\e652";
 }
 .cmcc:before {
 content: "\e989";
-}
-.ifeng:before {
-content: "\e605";
 }
 .live:before {
   content: "\f149";
